--- a/app/src/main/res/layout/activity_start_sign_up_by_phone.xml
+++ b/app/src/main/res/layout/activity_start_sign_up_by_phone.xml
@@ -97,8 +97,7 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/codeEditText"
@@ -121,6 +120,7 @@
                 android:layout_width="100dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginRight="16dp"
                 android:background="@drawable/button_light_solid_drawable"
                 android:gravity="center"
                 android:text="@string/acquire_code"
@@ -157,7 +157,7 @@
         android:layout_above="@+id/signUpLayout"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="6dp">
+        android:layout_marginBottom="12dp">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -169,8 +169,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:text="@string/other_sign_up_ways"
             android:textColor="@color/start_divider"/>
 
@@ -190,7 +190,7 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="12dp">
+        android:layout_marginBottom="18dp">
 
         <ImageView
             android:id="@+id/emailImageView"
