add pinned section listview

--- a/app/src/main/res/layout/activity_reim_member.xml
+++ b/app/src/main/res/layout/activity_reim_member.xml
@@ -110,7 +110,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
+        <classes.widget.PinnedSectionListView
             android:id="@+id/userListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
