--- a/app/src/main/res/layout/activity_reim_location.xml
+++ b/app/src/main/res/layout/activity_reim_location.xml
@@ -114,7 +114,7 @@
                 android:layout_height="0.5dp"
                 layout="@layout/view_divider"/>
 
-            <ListView
+            <classes.widget.PinnedSectionListView
                 android:id="@+id/locationListView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
