--- a/app/src/main/res/layout/activity_report_cc.xml
+++ b/app/src/main/res/layout/activity_report_cc.xml
@@ -140,7 +140,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
+        <classes.widget.PinnedSectionListView
             android:id="@+id/ccListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
