--- a/app/src/main/res/layout/activity_report_manager.xml
+++ b/app/src/main/res/layout/activity_report_manager.xml
@@ -198,48 +198,13 @@
 
                 </RelativeLayout>
 
-                <include
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    layout="@layout/view_divider"/>
-
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/colleagueContainer"
+            <classes.widget.PinnedSectionListView
+                android:id="@+id/managerListView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="24dp"
-                    android:background="@color/list_item_header">
-
-                    <TextView
-                        android:id="@+id/colleagueTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="16dp"
-                        android:text="@string/my_colleagues"
-                        android:textColor="@color/font_list_item_header"
-                        android:textSize="14sp"/>
-
-                </RelativeLayout>
-
-                <include
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    layout="@layout/view_divider"/>
-
-                <ListView
-                    android:id="@+id/managerListView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:listSelector="@drawable/list_item_drawable"/>
-
-            </LinearLayout>
+                android:layout_height="match_parent"
+                android:listSelector="@drawable/list_item_drawable"/>
 
         </LinearLayout>
 
