--- a/app/src/main/res/layout/activity_guide_wechat.xml
+++ b/app/src/main/res/layout/activity_guide_wechat.xml
@@ -42,8 +42,8 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
-        android:contentDescription="@string/share_wechat"
-        android:src="@drawable/wechat_share"/>
+        android:contentDescription="@string/wechat"
+        android:src="@drawable/wechat_session"/>
     
     <TextView
         android:layout_width="match_parent"
