--- a/app/src/main/res/layout/activity_guide_create_company.xml
+++ b/app/src/main/res/layout/activity_guide_create_company.xml
@@ -59,6 +59,7 @@
         android:paddingRight="16dp"
         android:background="@color/major_light"
         android:hint="@string/input_company_name"
+        android:singleLine="true"
         android:textColor="@color/font_major_dark"
         android:textSize="16sp"
         android:textCursorDrawable="@null"/>
