--- a/app/src/main/res/layout/window_me_share.xml
+++ b/app/src/main/res/layout/window_me_share.xml
@@ -18,7 +18,7 @@
             android:orientation="vertical"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
-            android:background="@drawable/popup_drawable">
+            android:background="@drawable/window_item_drawable">
 
             <ImageView
                 android:layout_width="50dp"
@@ -46,7 +46,7 @@
             android:orientation="vertical"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
-            android:background="@drawable/popup_drawable">
+            android:background="@drawable/window_item_drawable">
 
             <ImageView
                 android:layout_width="50dp"
@@ -78,7 +78,7 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="56dp"
 	    android:gravity="center"
-	    android:background="@drawable/popup_drawable"
+	    android:background="@drawable/window_dismiss_drawable"
 	    android:text="@string/cancel"
 	    android:textColor="@color/button_text_dark_color"
 	    android:textSize="18sp"/>
