--- a/app/src/main/res/layout/view_stat_mine.xml
+++ b/app/src/main/res/layout/view_stat_mine.xml
@@ -223,6 +223,7 @@
             android:gravity="center_vertical"
             android:textColor="@color/font_list_item_header"
             android:textSize="14sp"/>
+
     </LinearLayout>
 
     <include
@@ -234,38 +235,30 @@
         android:id="@+id/monthLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:orientation="vertical"/>
 
-    <RelativeLayout
+    <include
         android:layout_width="match_parent"
-        android:layout_height="25dp"
+        android:layout_height="0.5dp"
+        layout="@layout/view_divider"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:layout_centerVertical="true"
+        android:paddingLeft="16dp"
         android:background="@color/list_item_header"
-        android:orientation="vertical">
+        android:gravity="center_vertical"
+        android:text="@string/stat_by_category"
+        android:textColor="@color/font_list_item_header"
+        android:textSize="14sp"/>
 
-        <include
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            layout="@layout/view_divider"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
-            android:gravity="center_vertical"
-            android:text="@string/stat_by_category"
-            android:textColor="@color/font_list_item_header"
-            android:textSize="14sp"/>
-
-        <include
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_alignParentBottom="true"
-            layout="@layout/view_divider"/>
-
-    </RelativeLayout>
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        layout="@layout/view_divider"/>
 
     <LinearLayout
         android:id="@+id/categoryLayout"
