--- a/app/src/main/res/layout/activity_start_find_by_phone.xml
+++ b/app/src/main/res/layout/activity_start_find_by_phone.xml
@@ -50,6 +50,7 @@
             android:paddingBottom="12dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
+            android:singleLine="true"
             android:hint="@string/input_phone"
             android:inputType="phone"
             android:drawableRight="@drawable/delete_start_drawable"
@@ -79,6 +80,7 @@
                 android:paddingBottom="12dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="10dp"
+                android:singleLine="true"
                 android:hint="@string/input_code"
                 android:inputType="number"
                 android:textColor="@color/font_major_light"
