--- a/app/src/main/res/layout/activity_start_sign_in.xml
+++ b/app/src/main/res/layout/activity_start_sign_in.xml
@@ -41,6 +41,7 @@
             android:paddingBottom="12dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
+            android:singleLine="true"
             android:hint="@string/input_username"
             android:inputType="textEmailAddress"
             android:drawableRight="@drawable/delete_start_drawable"
@@ -71,6 +72,7 @@
                 android:paddingBottom="12dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="12dp"
+                android:singleLine="true"
                 android:hint="@string/input_password"
                 android:drawableRight="@drawable/delete_start_drawable"
                 android:textColor="@color/font_major_light"
