--- a/app/src/main/res/layout/activity_start_sign_up_by_email.xml
+++ b/app/src/main/res/layout/activity_start_sign_up_by_email.xml
@@ -40,6 +40,7 @@
             android:paddingBottom="12dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
+            android:singleLine="true"
             android:hint="@string/input_email"
             android:inputType="textEmailAddress"
             android:drawableRight="@drawable/delete_start_drawable"
@@ -69,6 +70,7 @@
                 android:paddingBottom="12dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="12dp"
+                android:singleLine="true"
                 android:hint="@string/input_password"
                 android:drawableRight="@drawable/delete_start_drawable"
                 android:textColor="@color/font_major_light"
