--- a/app/src/main/res/layout/activity_start_complete_info.xml
+++ b/app/src/main/res/layout/activity_start_complete_info.xml
@@ -57,6 +57,7 @@
             android:paddingBottom="12dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
+            android:singleLine="true"
             android:hint="@string/input_nickname"
             android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
