--- a/app/src/main/res/layout/activity_start_find_by_email.xml
+++ b/app/src/main/res/layout/activity_start_find_by_email.xml
@@ -49,6 +49,7 @@
             android:paddingBottom="12dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
+            android:singleLine="true"
             android:hint="@string/input_email"
             android:inputType="textEmailAddress"
             android:drawableRight="@drawable/delete_start_drawable"
