--- a/app/src/main/res/layout/activity_start_reset_password.xml
+++ b/app/src/main/res/layout/activity_start_reset_password.xml
@@ -48,6 +48,7 @@
             android:paddingBottom="12dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
+            android:singleLine="true"
             android:hint="@string/input_password"
             android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
@@ -70,6 +71,7 @@
             android:paddingBottom="12dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
+            android:singleLine="true"
             android:hint="@string/input_confirm_password"
             android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
