--- a/app/src/main/res/layout/activity_start_sign_up_by_phone.xml
+++ b/app/src/main/res/layout/activity_start_sign_up_by_phone.xml
@@ -40,6 +40,7 @@
             android:paddingBottom="12dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
+            android:singleLine="true"
             android:hint="@string/input_phone"
             android:inputType="phone"
             android:drawableRight="@drawable/delete_start_drawable"
@@ -69,6 +70,7 @@
                 android:paddingBottom="12dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="12dp"
+                android:singleLine="true"
                 android:hint="@string/input_password"
                 android:drawableRight="@drawable/delete_start_drawable"
                 android:textColor="@color/font_major_light"
@@ -108,6 +110,7 @@
                 android:paddingBottom="12dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="10dp"
+                android:singleLine="true"
                 android:hint="@string/input_code"
                 android:inputType="number"
                 android:textColor="@color/font_major_light"
