--- a/app/src/main/res/layout/activity_reim_member.xml
+++ b/app/src/main/res/layout/activity_reim_member.xml
@@ -49,7 +49,7 @@
         android:layout_height="66dp"
         android:orientation="vertical"
         android:background="@drawable/list_item_drawable"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
